--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
 
-    <div class="circle-carousel-indicators">
+    <!--<div class="circle-carousel-indicators">
         <ol class="carousel-indicators">
           <li data-target="#carousel" data-slide-to="0" id="slide0"></li>
           <li data-target="#carousel" data-slide-to="1" id="slide1"></li>
@@ -44,7 +44,7 @@
           <li data-target="#carousel" data-slide-to="3" id="slide3"></li>
           <li data-target="#carousel" data-slide-to="4" id="slide4"></li>
       </ol>
-    </div>
+    </div>-->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/scripts.js"></script>
